--- a/depthdemo.html
+++ b/depthdemo.html
@@ -62,7 +62,7 @@
     cursor: pointer;
     display: block;
     float: left;
-    height, : 40px;
+    height : 40px;
     line-height: 40px;
     margin-right: 5px;
     padding: 0 20px;
